attempt to fix alignment of icons on index for small screens, changed wording for TOC google doc, added font family to main class for headings, resolved all commented out issues in merchant log XSLT (thus full editor names are appearing when @resp instead of just ID)

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -73,6 +73,7 @@ manu_Content{
 .main{
     text-align: center;
     font-size: 25pt !important;
+    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
 }
 .minTitle{
     text-align: center;
